# swift-package-manager

./: .dir-locals.el  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .license_header_template  .licenseignore  .mailfilter  .mailmap  .pep8  .swift-format  .swift-format-ignore  .swift-version  .swiftformat  .travis.yml  Basics.emit-module.d  BasicsTests.emit-module.d  Build.emit-module.d  BuildTests.emit-module.d  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OWNERS.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  Commands.emit-module.d  CommandsTests.emit-module.d  FunctionalPerformanceTests.emit-module.d  FunctionalTests.emit-module.d  LLBuildManifest.emit-module.d  NOTICE.txt  Package.resolved  Package.swift  PackageCollections.emit-module.d  PackageCollectionsModelTests.emit-module.d  PackageCollectionsSigning.emit-module.d  PackageCollectionsSigningTests.emit-module.d  PackageCollectionsTests.emit-module.d  PackageDescription.emit-module.d  PackageDescriptionTests.emit-module.d  (+45 more)
BuildSupport/SwiftSyntax/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/ASTParser/: generate().swift  parseAST().swift  parser.swift
Sources/AppleProductTypes/: Product.swift
Sources/AsyncWorkspace/: AsyncWorkspace.swift  Workspace+Event.swift
Sources/Basic/: Await.swift  ByteString.swift  CMakeLists.txt  CStringArray.swift  CacheableSequence.swift  CollectionAlgorithms.swift  CollectionExtensions.swift  Condition.swift  DeltaAlgorithm.swift  DiagnosticsEngine.swift  DictionaryExtensions.swift  DictionaryLiteralExtensions.swift  DistributedLock.swift  EditDistance.swift  FSProxy.swift  FileInfo.swift  FileSystem.swift  FixableError.swift  GraphAlgorithms.swift  JSON.swift  JSONMapper.swift  KeyedPair.swift  LRUCache.swift  LazyCache.swift  LinkedList.swift  Lock.swift  NSRegularExpressionShim.swift  OSLog.swift  ObjectIdentifierProtocol.swift  OptionParser.swift  OrderedDictionary.swift  OrderedSet.swift  OutputByteStream.swift  PackageDir.swift  Path.swift  PathShims.swift  Process.swift  ProcessEnv.swift  ProcessSet.swift  README.md  (+18 more)
Sources/Basics/: Archiver+Libzip.swift  Archiver+Tar.swift  Archiver+Zip.swift  Archiver.swift  ArrayHelpers.swift  AsyncProcess.swift  AuthorizationProvider.swift  ByteString+Extensions.swift  CMakeLists.txt  Cancellator.swift  ConcurrencyHelpers.swift  Dictionary+Extensions.swift  DispatchTimeInterval+Extensions.swift  EnvironmentVariables.swift  Errors.swift  Exports.swift  FileSystem+Extensions.swift  FileWatcher.swift  Git.swift  GitHubSourceArchiveProvider.swift  GitProtocolV2.swift  GraphAlgoritms.swift  HTPClient+URLSession.swift  HTTPClient+URLSession.swift  HTTPClient.swift  ImportScanning.swift  JSON+Extensions.swift  JSONDecoder+Extensions.swift  KnownFolders.swift  Lock.swift  MultiFormatArchiver.swift  NSLock+Extensions.swift  NativePathExtensions.swift  Netrc.swift  OSSignpost.swift  Observability.swift  Process.swift  ProgressAnimation.swift  SQLite.swift  SQLiteBackedCache.swift  (+22 more)
Sources/BinarySymbols/: CMakeLists.txt  ClangHostDefaultObjectsDetector.swift  LLVMObjdumpSymbolProvider.swift  ReferencedSymbols.swift  SymbolProvider.swift
Sources/BuildSystemCMake/: BuildCache.swift  CMakeBuilder.swift  CMakeIntegration.swift  HeaderAnalyzer.swift  ModuleMapGenerator.swift  ModuleMapPolicy.swift  SwiftTargetInfo.swift
Sources/Commands/: APIDigester.swift  BuildSystem.swift  CMakeAnalyze.swift  CMakeDiagnose.swift  CMakeLists.txt  CommandWorkspaceDelegate.swift  Completions+bash.swift  Completions+zsh.swift  Describe.swift  Destination.swift  Error.swift  EventStreamMerger.swift  FileContentsMerger.swift  GenerateLinuxMain.swift  MultiRootSupport.swift  Options.swift  PinsStore.swift  README.md  Shims.swift  SwiftBuildCommand.swift  SwiftBuildTool.swift  SwiftFixitCommand.swift  SwiftMigrateCommand.swift  SwiftPackageCollectionsTool.swift  SwiftPackageRegistryTool.swift  SwiftPackageResolveTool.swift  SwiftPackageTool.swift  SwiftPlayCommand.swift  SwiftRunCommand.swift  SwiftRunTool.swift  SwiftScaffold.swift  SwiftScriptTool.swift  SwiftTestCommand.swift  SwiftTestTool.swift  SwiftTool.swift  SymbolGraphExtract.swift  TestingSupport.swift  ToolDefaults.swift  ToolWorkspaceDelegate.swift  ToolsVersionWriter.swift  (+11 more)
Sources/CompilerPluginSupport/: CMakeLists.txt  TargetExtensions.swift
Sources/Configurations/: CMakeLists.txt  Configuration+Collections.swift  Configuration+ManifestLoading.swift  Configuration+Mirrors.swift  Configuration+Netrc.swift  Configuration+Resolution.swift  Configuration.swift  Locations.swift  Utilities.swift
Sources/CoreCommands/: BuildSystemSupport.swift  CMakeLists.txt  CommandWorkspaceDelegate.swift  MinimalBuildTool.swift  Options.swift  SwiftCommandObservabilityHandler.swift  SwiftCommandState.swift  SwiftTool.swift  SwiftToolObservabilityHandler.swift
Sources/CrossCompilationDestinationsTool/: CMakeLists.txt  DestinationCommand.swift  InstallDestination.swift  ListDestinations.swift  RemoveDestination.swift  SwiftDestinationCommand.swift  SwiftDestinationTool.swift
Sources/DriverSupport/: CMakeLists.txt  DriverSupportUtils.swift  Frontend.swift  SPMSwiftDriverExecutor.swift  SwiftPMDriverExecutor.swift
Sources/Environment/: CMakeLists.txt  Environment.swift  EnvironmentKey.swift
Sources/Get/: Error.swift  Fetchable.swift  Fetcher.swift  Git.swift  Manifest+Fetchable.swift  Package.swift  PackagesDirectory.swift  README.md  Range.swift  RangeExtensions.swift  RawClone.swift  Version.swift  VersionRange.swift  get().swift
Sources/InternalTestSupport/: ManifestExtensions.swift  MockBuildTestHelper.swift  MockDependency.swift  MockPackage.swift  MockPackageSigningEntityStorage.swift  PackageGraphTester.swift
Sources/LLBuildManifest/: BuildManifest.swift  CMakeLists.txt  Command.swift  DOTManifestSerializer.swift  LLBuildManifest.swift  LLBuildManifestWriter.swift  ManifestWriter.swift  Node.swift  Target.swift  Tools.swift
TSC/: CMakeLists.txt  LICENSE.txt  Package.swift
swift-tools-support-core/: .gitignore  .swiftformat  CMakeLists.txt  CODEOWNERS  Package.swift  README.md
(+7625 files in other folders)
